RESOLVED FIXED 42106
HTML tags should break out of foreign content
https://bugs.webkit.org/show_bug.cgi?id=42106
Summary HTML tags should break out of foreign content
Eric Seidel (no email)
Reported 2010-07-12 13:30:19 PDT
HTML tags should break out of foreign content
Attachments
Patch (10.03 KB, patch)
2010-07-12 13:32 PDT, Eric Seidel (no email)
abarth: review+
abarth: commit-queue-
Eric Seidel (no email)
Comment 1 2010-07-12 13:32:06 PDT
Adam Barth
Comment 2 2010-07-12 13:48:33 PDT
Comment on attachment 61263 [details] Patch WebCore/html/HTMLTreeBuilder.cpp:1537 + m_tree.openElements()->pop(); This feels like it should be popUntil(xhtmlNamespaceURI)
Eric Seidel (no email)
Comment 3 2010-07-12 14:15:12 PDT
(In reply to comment #2) > (From update of attachment 61263 [details]) > WebCore/html/HTMLTreeBuilder.cpp:1537 > + m_tree.openElements()->pop(); > This feels like it should be popUntil(xhtmlNamespaceURI) Yeah, that'd be neat. I'll look into it.
Eric Seidel (no email)
Comment 4 2010-07-12 16:17:12 PDT
Note You need to log in before you can comment on or make changes to this bug.