WebCore/html/HTMLElementStack.h
@@ -83,6 +83,7 @@ public:
 
     void pop();
     void popUntil(const AtomicString& tagName);
+    void popUntilElementWithNamespace(const AtomicString& namespaceURI);
     void popUntil(Element*);
     void popUntilPopped(const AtomicString& tagName);
     void popUntilPopped(Element*);
